Adicinando o README ao projeto principal.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,22 @@
-FROM node:18.17.0 as build
+FROM node:18.17.0 AS build
 
+# Configura URL do backend
 ARG REACT_APP_BACKEND_URL
 ENV REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL:-http://localhost/api}
 
 WORKDIR /app
 
-# Copiar arquivos essenciais do projeto
+# Copia arquivos essenciais e instala dependências
 COPY package.json package-lock.json ./
-
-# Instalar dependências e corrigir problemas com Babel e React
 RUN yarn config set strict-ssl false && CYPRESS_INSTALL_BINARY=0 yarn install
-# RUN yarn install
-RUN yarn add @babel/plugin-proposal-private-property-in-object --dev
-RUN yarn add @types/react --dev
 
-# Copiar todo o projeto para o container
+# Copia todo o projeto e cria o build
 COPY . .
-
-# Construir a aplicação
 RUN yarn build
 
+# Usa Nginx para servir a aplicação
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
-
